k8s/test/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codecon-test-frontend
  namespace: codecon-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`codecon-test.institutoitinerante.com.br`)
      kind: Rule
      services:
        - name: codecon-feedback-frontend
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codecon-test-backend
  namespace: codecon-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`codecon-test.institutoitinerante.com.br`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: codecon-feedback-backend
          port: 80
