k8s/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codecon-feedback-backend
  namespace: codecon-test
spec:
  selector:
    app: codecon-feedback-backend
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: codecon-feedback-frontend
  namespace: codecon-test
spec:
  selector:
    app: codecon-feedback-frontend
  ports:
    - port: 80
      targetPort: 80
